# ValManager

./: .git-blame-ignore-revs  .gitignore  README.md  __main__.py  alias.py  api.py  auth.py  config.py  exceptions.py  loadout.py  main.py  parsing.py  password.py  pyproject.toml  riot.py  storage.py  structs.py
ValConfig/: __main__.py  alias.py  backup.py  config.py  loadout.py  main.py  storage.py  structs.py  tui.py
ValConfig/backup/: backup.py  storage.py  transform.py
