[project]
name="ValConfig"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "PWall" }]
license = {text = "GPL-3.0"}
dependencies = [
	"ValVault",
	"ValLib",
	"requests",
	"bidict",
	"pick"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ValUtils/ValConfig"
