[project]
name="ValConfig"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "PWall" }]
license = {text = "GPL-3.0"}
dependencies = [
	"ValVault",
	"ValLib",
	"requests",
	"bidict",
	"pick"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ValUtils/ValConfig"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = """
bump version {old_version} -> {new_version}
[no ci]
"""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
	'current_version = "{version}"',
	'version = "{version}"',
]
